# DemoPackage

./: .bumpversion.cfg  Makefile  comandos.txt  pyproject.toml
.gitflow/workflow/: ci.yml
.github/workflows/: cd.yml  ci.yml
sumadora/: __init__.py  __main__.py  sumadora.py
test/: test_sumadora.py
